Firebaseを使ったTwitter OAuthの実装

--- a/.github/workflows/webstore-prod.yml
+++ b/.github/workflows/webstore-prod.yml
@@ -13,6 +13,7 @@ jobs:
       # 本番用のAPP_ID
       CHROMEWEBSTORE_APP_ID: iachoklpnnjfgmldgelflgifhdaebnol
       NODE_ENV: production
+      FIREBASE_CONFIG_JSONSTR: ${{ secrets.FIREBASE_CONFIG_JSONSTR }}
     steps:
     - uses: actions/checkout@v2
     - run: |
