--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ release
 app-config.json
 secret.json
 v2_backup
+config/*
+!config/example/
+!config/example/*
 
 dest/css/
 # https://github.com/webpack-contrib/mini-css-extract-plugin/issues/151
