--- a/manifest.json
+++ b/manifest.json
@@ -52,6 +52,7 @@
     "/dest/img/unmute.svg",
     "/dest/img/camera.svg"
   ],
+  "content_security_policy": "script-src 'self' https://apis.google.com; object-src 'self'",
   "commands": {
     "screenshot": {
       "description": "プレイ画面のスクショを撮ります",
