--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": "6.13.4"
   },
   "scripts": {
-    "postinstall": "rm -f node_modules/public-encrypt/test/*.pem",
+    "postinstall": "rm -f node_modules/public-encrypt/test/*.pem && node ./scripts/postinstall.js",
     "start": "NODE_ENV=development webpack --progress --watch",
     "version": "node ./scripts/version.js",
     "build": "webpack && rm dest/css/*.js",
