--- a/.github/workflows/webstore-stage.yml
+++ b/.github/workflows/webstore-stage.yml
@@ -1,5 +1,7 @@
 name: Web Store TEST
 on:
+  # scheduleはdefault-latestでしか動かない
+  # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows#scheduled-events
   schedule:
     - cron: '0 4 * * *'
 
@@ -56,10 +58,6 @@ jobs:
       run: npm run announce
       if: ${{ env.SHOULD_DELIVER_DEV }}
 
-    - name: Create RELEASE PR
-      run: npm run create-release-pr
-      if: ${{ env.SHOULD_DELIVER_DEV }}
-
     # SHOULD_DELIVER_DEV に関わらず、announcement.txtの内容をツイートする
     - name: Tweet announcement
       run: |
@@ -68,3 +66,9 @@ jobs:
       env:
         TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
         TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+
+    - name: Create RELEASE PR
+      run: npm run create-release-pr
+      if: ${{ env.SHOULD_DELIVER_DEV }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
