ローカル開発のために適当にコミットしちゃう

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tweet": "node ./scripts/tweet.js",
     "pack": "./scripts/pack.sh",
     "lint": "eslint src && eslint tests",
+    "should-release": "node ./scripts/should-release.js",
     "create-release-pr": "node ./scripts/create-release-pr.js",
     "test": "jest --coverage"
   },
