--- a/.github/workflows/webstore-prod.yml
+++ b/.github/workflows/webstore-prod.yml
@@ -27,30 +27,38 @@ jobs:
     - name: Install dependencies
       run: npm --production=false install
 
+    - name: リリースするか判断
+      run: npm run should-release
+
     - name: Build
       run: npm run build
+      if: ${{ env.SHOULD_RELEASE_PRODUCTION }}
 
     - name: Pack ZIP
       run: npm run pack
+      if: ${{ env.SHOULD_RELEASE_PRODUCTION }}
 
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./release/kcwidget.zip
-        asset_name: kcwidget.zip
-        asset_content_type: application/zip
+    # - name: Upload Release Asset
+    #   uses: actions/upload-release-asset@v1
+    #   if: ${{ env.SHOULD_RELEASE_PRODUCTION }}
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     upload_url: ${{ github.event.release.upload_url }}
+    #     asset_path: ./release/kcwidget.zip
+    #     asset_name: kcwidget.zip
+    #     asset_content_type: application/zip
 
     - name: Publish to Chrome Web Store
       run: npm run publish
+      if: ${{ env.SHOULD_RELEASE_PRODUCTION }}
       env:
         GOOGLEAPI_CLIENT_ID: ${{ secrets.GOOGLEAPI_CLIENT_ID }}
         GOOGLEAPI_CLIENT_SECRET: ${{ secrets.GOOGLEAPI_CLIENT_SECRET }}
         GOOGLEAPI_REFRESH_TOKEN: ${{ secrets.GOOGLEAPI_REFRESH_TOKEN }}
 
     - name: Create release announcement
+      if: ${{ env.SHOULD_RELEASE_PRODUCTION }}
       run: |
         cat << EOS > announcement.txt
         【リリース情報: ${NAME}】 #艦これウィジェット
@@ -64,6 +72,7 @@ jobs:
         NAME: ${{ github.event.release.tag_name }}
 
     - name: Tweet announcement
+      if: ${{ env.SHOULD_RELEASE_PRODUCTION }}
       run: |
         announcement=`cat announcement.txt`
         echo "[DEBUG] ${announcement}"
