--- a/.github/workflows/webstore-stage.yml
+++ b/.github/workflows/webstore-stage.yml
@@ -33,32 +33,28 @@ jobs:
         git config --global user.email otiai10+ayanel-ci@gmail.com
         git config --global user.name "Ayanel CI"
 
-    - name: Should Deploy?
-      run: source ./scripts/should_deliver_dev.sh
+    - name: リリース必要性の判断
+      run: npm run should-release
       env:
         TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build
       run: npm run build
-      if: ${{ env.SHOULD_DELIVER_DEV }}
+      if: ${{ env.SHOULD_RELEASE_STAGE }}
 
     - name: Pack ZIP
       run: npm run pack
-      if: ${{ env.SHOULD_DELIVER_DEV }}
+      if: ${{ env.SHOULD_RELEASE_STAGE }}
 
     - name: Publish to Chrome Web Store
       run: npm run publish
-      if: ${{ env.SHOULD_DELIVER_DEV }}
+      if: ${{ env.SHOULD_RELEASE_STAGE }}
       env:
         GOOGLEAPI_CLIENT_ID: ${{ secrets.GOOGLEAPI_CLIENT_ID }}
         GOOGLEAPI_CLIENT_SECRET: ${{ secrets.GOOGLEAPI_CLIENT_SECRET }}
         GOOGLEAPI_REFRESH_TOKEN: ${{ secrets.GOOGLEAPI_REFRESH_TOKEN }}
 
-    - name: Create release announcement
-      run: npm run announce
-      if: ${{ env.SHOULD_DELIVER_DEV }}
-
-    # SHOULD_DELIVER_DEV に関わらず、announcement.txtの内容をツイートする
+    # SHOULD_RELEASE_STAGE に関わらず、announcement.txtの内容をツイートする
     - name: Tweet announcement
       run: |
         announcement=`cat announcement.txt`
@@ -69,6 +65,6 @@ jobs:
 
     - name: Create RELEASE PR
       run: npm run create-release-pr
-      if: ${{ env.SHOULD_DELIVER_DEV }}
+      if: ${{ env.SHOULD_RELEASE_STAGE }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
