--- a/.github/workflows/webstore-prod.yml
+++ b/.github/workflows/webstore-prod.yml
@@ -29,6 +29,8 @@ jobs:
 
     - name: リリースするか判断
       run: npm run should-release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build
       run: npm run build
