--- a/.github/workflows/webstore-stage.yml
+++ b/.github/workflows/webstore-stage.yml
@@ -15,6 +15,7 @@ jobs:
       FIREBASE_CONFIG_JSONSTR: ${{ secrets.FIREBASE_CONFIG_JSONSTR }}
       TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
       TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+      GITHUB_REPOSITORY: ${{ github.repository }}
     steps:
     - uses: actions/checkout@v2
       with:
@@ -35,8 +36,8 @@ jobs:
 
     - name: リリース必要性の判断
       run: npm run should-release
-      # env:
-      #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build
       run: npm run build
