トリガーになったissue番号と、RELEASE PRのPR番号を比較して、違うならスキップ
Fix #1247

--- a/.github/workflows/webstore-prod.yml
+++ b/.github/workflows/webstore-prod.yml
@@ -30,6 +30,7 @@ jobs:
     - name: リリースするか判断
       run: npm run should-release
       env:
+        ISSUE_NUMBER: ${{ github.event.issue.number }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build
