--- a/.github/workflows/webstore-prod.yml
+++ b/.github/workflows/webstore-prod.yml
@@ -15,6 +15,8 @@ jobs:
       GITHUB_REPOSITORY: ${{ github.repository }}
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: develop
     - run: |
         echo "[DEBUG] github.event_name: ${{ github.event_name }}"
         echo "[DEBUG] github.event.action: ${{ github.event.action }}"
