--- a/.github/workflows/webstore-prod.yml
+++ b/.github/workflows/webstore-prod.yml
@@ -57,7 +57,7 @@ jobs:
         asset_content_type: application/zip
 
     - name: Publish to Chrome Web Store
-      run: npm run publish
+      run: npm run webstore-publish
       if: ${{ env.SHOULD_RELEASE_PRODUCTION }}
       env:
         GOOGLEAPI_CLIENT_ID: ${{ secrets.GOOGLEAPI_CLIENT_ID }}
