Good bye, uglifyjs-webpack-plugin

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "scripts": {
     "postinstall": "rm -f node_modules/public-encrypt/test/*.pem && node ./scripts/postinstall.js",
+    "clean": "rm -rf dest/js dest/css",
     "start": "NODE_ENV=development webpack --progress --watch",
     "version": "node ./scripts/version.js",
-    "build": "webpack && rm dest/css/*.js",
+    "build": "npm run clean && webpack && rm dest/css/*.js",
     "announce": "node ./scripts/announce.js",
     "tweet": "node ./scripts/tweet.js",
     "pack": "./scripts/pack.sh",
@@ -51,11 +52,11 @@
     "sass-loader": "^10.1.0",
     "sinon-chrome": "^3.0.1",
     "source-map-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.0.3",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.13",
     "twitter": "^1.7.1",
     "typescript": "^4.1.3",
-    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1"
   },
