requestがdeprecatedらしいのでnode-fetch使うのと、ts-nodeためしに使う

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "eslint src && eslint tests",
     "should-release": "node ./scripts/should-release.js",
     "create-release-pr": "node ./scripts/create-release-pr.js",
-    "webstore-publish": "node ./scripts/webstore-publish.js ./release/kcwidget.zip",
+    "__devbackup__webstore-publish": "node ./scripts/webstore-publish.js ./release/kcwidget.zip",
+    "webstore-publish": "ts-node --script-mode --project ./tsconfig.json ./scripts/webstore-publish.ts ./release/kcwidget.zip",
     "test": "jest --coverage"
   },
   "repository": "git+https://github.com/otiai10/kanColleWidget.git",
@@ -46,14 +47,15 @@
     "jest-canvas-mock": "^2.3.0",
     "jest-cli": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.3",
+    "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
-    "request-promise": "^4.2.6",
     "sass-loader": "^10.1.0",
     "sinon-chrome": "^3.0.1",
     "source-map-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.13",
+    "ts-node": "^9.1.1",
     "twitter": "^1.7.1",
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
