--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -2,8 +2,8 @@
     "compilerOptions": {
         "sourceMap": false,
         "module": "CommonJS",
-        "target": "es5",
-        "lib": ["es6", "es2015", "ES2017", "dom"],
+        "target": "ES5",
+        "lib": ["ES6", "ES2015", "ES2017", "ES2019"],
         "types": [
             "node"
         ],
