依存関係のアップデートPRのデフォルト担当者を指定

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,7 @@ updates:
     schedule:
       interval: daily
     target-branch: develop
+    reviewers:
+      - otiai10
+    assignees:
+      - otiai10
