--- a/.github/workflows/javascript-ci.yml
+++ b/.github/workflows/javascript-ci.yml
@@ -20,7 +20,6 @@ jobs:
       run: npm run lint
     - name: Test
       run: npm run test
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
+    - uses: codecov/codecov-action@v1
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        file: ./coverage/coverage-final.json
