--- a/package.json
+++ b/package.json
@@ -7,19 +7,17 @@
     "npm": "6.14.0"
   },
   "scripts": {
-    "postinstall": "rm -f node_modules/public-encrypt/test/*.pem && node ./scripts/postinstall.js",
+    "postinstall": "rm -f node_modules/public-encrypt/test/*.pem && ts-node --script-mode ./scripts/postinstall.ts",
     "clean": "rm -rf dest/js dest/css",
     "start": "NODE_ENV=development webpack --progress --watch",
-    "version": "node ./scripts/version.js",
     "build": "npm run clean && webpack && rm dest/css/*.js",
-    "announce": "node ./scripts/announce.js",
-    "tweet": "node ./scripts/tweet.js",
+    "announce": "ts-node --script-mode ./scripts/announce.ts",
+    "tweet": "ts-node --script-mode ./scripts/tweet.ts",
     "pack": "./scripts/pack.sh",
     "lint": "eslint src tests scripts/*.ts",
     "should-release": "node ./scripts/should-release.js",
-    "create-release-pr": "node ./scripts/create-release-pr.js",
-    "__devbackup__webstore-publish": "node ./scripts/webstore-publish.js ./release/kcwidget.zip",
-    "webstore-publish": "ts-node --script-mode --project ./tsconfig.json ./scripts/webstore-publish.ts ./release/kcwidget.zip",
+    "create-release-pr": "ts-node --script-mode ./scripts/create-release-pr.ts",
+    "webstore-publish": "ts-node --script-mode ./scripts/webstore-publish.ts ./release/kcwidget.zip",
     "test": "jest --coverage"
   },
   "repository": "git+https://github.com/otiai10/kanColleWidget.git",
