Tesseract.js を使ってみる実験

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "oauthsimple": "0.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "spectre.css": "^0.5.9"
+    "spectre.css": "^0.5.9",
+    "tesseract.js": "^2.1.4"
   }
 }
