リリーススクリプトなどのTypeScriptのコンパイルエラーを検出するようCIを修正

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ config/*
 !config/example/*
 !config/dev/.gitkeep
 announcement.txt
+scripts/out/*
 
 dest/css/
 # https://github.com/webpack-contrib/mini-css-extract-plugin/issues/151
