--- a/.github/workflows/javascript-ci.yml
+++ b/.github/workflows/javascript-ci.yml
@@ -17,6 +17,8 @@ jobs:
         node-version: 14.x
     - name: Install dependencies
       run: npm install
+    - name: Compile Scripts
+      run: npm run test:scripts
     - name: Lint
       run: npm run lint
     - name: Test
