--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest": "^26.6.3",
     "jest-canvas-mock": "^2.3.0",
     "jest-cli": "^26.6.3",
+    "jestil": "0.0.1",
     "mini-css-extract-plugin": "^1.3.5",
     "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
