--- a/.github/workflows/javascript-ci.yml
+++ b/.github/workflows/javascript-ci.yml
@@ -23,6 +23,8 @@ jobs:
       run: npm run lint
     - name: Test
       run: npm run test
+    - name: Build
+      run: npm run build
     - uses: codecov/codecov-action@v1
       with:
         file: ./coverage/coverage-final.json
