--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
     "@types/chrome": "0.0.145",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^26.0.24",
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
@@ -42,7 +42,7 @@
     "eslint": "^7.28.0",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-react": "^7.24.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.6",
     "jest-canvas-mock": "^2.3.1",
     "jest-cli": "^27.0.6",
     "jestil": "0.0.1",
@@ -53,11 +53,11 @@
     "sinon-chrome": "^3.0.1",
     "source-map-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.1.3",
-    "ts-jest": "^26.5.6",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-jest": "^27.0.4",
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.1.0",
     "twitter": "^1.7.1",
-    "typescript": "^4.3.2",
+    "typescript": "^4.3.5",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2"
   },
@@ -89,7 +89,8 @@
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/v2_backup/"
-    ]
+    ],
+    "testEnvironment": "jsdom"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
