--- a/.github/workflows/release-failure-notification.yml
+++ b/.github/workflows/release-failure-notification.yml
@@ -1,3 +1,5 @@
+name: Release Health Watcher
+
 on:
   workflow_run:
     workflows: ["Web Store TEST", "Web Store PRODUCTION"]
@@ -28,5 +30,7 @@ jobs:
           npm run tweet "${announcement}"
         fi
       env:
+        TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+        TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
         TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
         TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
