GitHub Actions で利用パッケージのバージョンを更新

--- a/.github/workflows/egosearch.yml
+++ b/.github/workflows/egosearch.yml
@@ -7,11 +7,11 @@ jobs:
   egosearch:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Node.js
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: 14.x
+        node-version: 18
     - name: Install dependencies
       run: npm install
     - name: Search & Retweet
