--- a/.github/workflows/webstore-prod.yml
+++ b/.github/workflows/webstore-prod.yml
@@ -14,7 +14,7 @@ jobs:
       TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
       GITHUB_REPOSITORY: ${{ github.repository }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         ref: develop
         fetch-depth: 0
@@ -24,9 +24,9 @@ jobs:
         echo "[DEBUG] github.event.action: ${{ github.event.action }}"
         echo "[DEBUG] github.event.issue.number: github.event.issue.number }}"
     - name: Set up Node.js
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: 14.x
+        node-version: 18
 
     - name: Install dependencies
       run: npm --production=false install
