--- a/.github/workflows/contrib-notice.yml
+++ b/.github/workflows/contrib-notice.yml
@@ -14,10 +14,10 @@ jobs:
   notification:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
       with:
-        node-version: 14.x
+        node-version: 18
     - run: npm install
 
     - name: Issue用ツイート内容の生成
