--- a/.github/workflows/release-failure-notification.yml
+++ b/.github/workflows/release-failure-notification.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         ref: develop
     - name: Set up Node.js
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: 14.x
+        node-version: 18
     - name: Install dependencies
       run: npm install
     - name: Tweet announcement
