Node.js/NPMのバージョンを更新

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "3.2.74",
   "description": "『艦これ』をちょっとだけ快適にするやつ",
   "engines": {
-    "node": "~14.15.0",
-    "npm": "6.14.0"
+    "node": "18.12.1",
+    "npm": "8.19.2"
   },
   "scripts": {
     "postinstall": "rm -f node_modules/public-encrypt/test/*.pem && ts-node --script-mode ./scripts/postinstall.ts",
