--- a/.github/workflows/webstore-stage.yml
+++ b/.github/workflows/webstore-stage.yml
@@ -4,6 +4,7 @@ on:
   # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows#scheduled-events
   schedule:
     - cron: '0 4 * * *'
+  workflow_dispatch:
 
 jobs:
   delivery:
