MV3対応にともなってテスト版へ誘導のお知らせを表示

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,6 @@
   "jest.enableInlineErrorMessages": true,
   "jest.showCoverageOnLoad": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   }
 }
