なんとなくタイマーまわりのドメインモデルを実装

--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -5,6 +5,8 @@
   "version": "4.0.0",
   "permissions": [
     "activeTab",
+    "alarms",
+    "storage",
     "webNavigation"
   ],
   "optional_host_permissions": [
