--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.41",
     "sass": "^1.77.8",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vitest": "^2.0.5"
