--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -7,12 +7,13 @@
     "activeTab",
     "alarms",
     "notifications",
+    "scripting",
     "storage",
     "webRequest",
     "webNavigation"
   ],
   "host_permissions": [
-    "http://dmm.com/*",
+    "http://www.dmm.com/*",
     "http://osapi.dmm.com/*"
   ],
   "optional_host_permissions": [
