--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jstorm": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "tesseract.js": "^5.1.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
