--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "chromite": "^0.1.8",
     "jstorm": "^0.17.0",
     "react": "^18.2.0",
