--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "scripts": {
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "start": "tsc && vite build --watch",
-    "build": "tsc && vite build",
+    "start": "tsc && pnpm run copy-tesseract && vite build --watch",
+    "build": "tsc && pnpm run copy-tesseract && vite build",
+    "copy-tesseract": "cp node_modules/tesseract.js/dist/worker.min.js src/public/tessworker.min.js && cp -r node_modules/@tesseract.js-data/eng/4.0.0_best_int src/public/tessdata-4.0.0_best_int",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tesseract.js-data/eng": "1.0.0",
     "chromite": "^0.1.8",
     "jstorm": "^0.17.0",
     "react": "^18.2.0",
