distフォルダ下にtessdataが重複して作成されるのを予防

--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -54,7 +54,7 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "tess-worker.min.js",
+        "tessworker.min.js",
         "tessdata-4.0.0_best_int/*"
       ],
       "matches": [
