webNavigationまだ使ってないのでmanifestから削除

--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -9,8 +9,7 @@
     "notifications",
     "scripting",
     "storage",
-    "webRequest",
-    "webNavigation"
+    "webRequest"
   ],
   "host_permissions": [
     "http://www.dmm.com/*",
